--- a/src/resources/styles/material.css
+++ b/src/resources/styles/material.css
@@ -12,7 +12,8 @@ a:hover {
     text-decoration: none;
 }
 
-.menu ul.list li a:hover, .menu ul.list li.chapter .simple:hover {
+.menu ul.list li a:hover,
+.menu ul.list li.chapter .simple:hover {
     background-color: #f8f9fa;
     text-decoration: none;
 }
@@ -33,7 +34,8 @@ a:hover {
 /** CARD **/
 
 .card {
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 1px 5px 0 rgba(0, 0, 0, 0.12);
     border-radius: 0.125rem;
     border: 0;
     margin-top: 1px;
@@ -60,7 +62,9 @@ a:hover {
     color: rgba(0, 0, 0, 0.54);
     margin-right: 0;
 }
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
     color: rgba(0, 0, 0, 0.87);
     border-top: 0;
     border-left: 0;
@@ -69,7 +73,8 @@ a:hover {
     border-color: #008cff;
     font-weight: bold;
 }
-.nav>li>a:focus, .nav>li>a:hover {
+.nav > li > a:focus,
+.nav > li > a:hover {
     background: none;
 }
 
@@ -90,13 +95,13 @@ a:hover {
     border-radius: 0.125rem;
 }
 
-pre[class*="language-"] {
+pre[class*='language-'] {
     border-radius: 0.125rem;
 }
 
 /** TABLE **/
 
-.table-hover>tbody>tr:hover {
+.table-hover > tbody > tr:hover {
     background: rgba(0, 0, 0, 0.075);
 }
 
@@ -106,4 +111,23 @@ table.params thead {
 table.params thead td {
     color: rgba(0, 0, 0, 0.54);
     font-weight: bold;
+}
+
+@media (prefers-color-scheme: dark) {
+    .menu .title:hover {
+        background-color: #2d2d2d;
+    }
+    .menu ul.list li a:hover,
+    .menu ul.list li.chapter .simple:hover {
+        background-color: #2d2d2d;
+    }
+    .nav-tabs > li > a {
+        color: #fafafa;
+    }
+    table.params thead {
+        background: #484848;
+    }
+    table.params thead td {
+        color: #fafafa;
+    }
 }
