--- a/src/resources/styles/original.css
+++ b/src/resources/styles/original.css
@@ -1,17 +1,17 @@
-.navbar-default .navbar-brand, .menu ul.list li.title {
+.navbar-default .navbar-brand,
+.menu ul.list li.title {
     font-weight: bold;
     color: #3c3c3c;
     padding-bottom: 5px;
 }
 
-.menu ul.list li a[data-type="chapter-link"], .menu ul.list li.chapter .simple {
+.menu ul.list li a[data-type='chapter-link'],
+.menu ul.list li.chapter .simple {
     font-weight: bold;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
     font-size: 14px;
 }
 
-.menu ul.list li a[href="./routes.html"] {
+.menu ul.list li a[href='./routes.html'] {
     border-bottom: none;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .menu ul.list li a.active {
-    color: inherit;
+    color: #337ab7;
     font-weight: bold;
 }
 
@@ -44,4 +44,10 @@
 }
 .menu ul.list li.divider {
     margin: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+    .menu ul.list li.chapter ul.links {
+        background: none;
+    }
 }
